--- a/about.html
+++ b/about.html
@@ -20,13 +20,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="about.html" class="back_white">
-						<svg>
-  						<!--Unicode Character 'LEFTWARDS TRIANGLE-HEADED ARROW' (U+2B60)-->
-						<path d="M229.2188 271.4062 L73.125 271.4062 L73.125 313.0312 L21.0938 261 L73.125 208.9688 L73.125 250.5938 L229.2188 250.5938 L229.2188 271.4062 Z" stroke="none"/>
-						</svg>
-						go back
-					</a>
+					<a href="about.html" class="back_white">< go back</a>
 				</div>
 			</div>
 			<div class="portf_group animated fadeIn faster delay-150ms">
