--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="index.html" class="back_black">&#11104; Home</a>
+					<a href="index.html" class="back_black">< Home</a>
 				</div>
 			</div>
 			<div class="section">
