--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 			</div>
 			<div class="top_right">
-				<span class="r40w500 underline show_on_mobile"><a class="hide_hyper" href="index.html" id="home_about">Home</a> / <a class="hide_hyper" href="work.html" id="work_about">My Work</a></span>
+				<span class="r40w500 underline show_on_mobile"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span> / <span class="r40w500 underline show_on_mobile"><a class="hide_hyper" href="work.html" id="work_about">My Work</a></span>
 			</div>
 			<div class="portf_group animated fadeIn faster delay-150ms">
 				<div class="first_col">
