--- a/about.html
+++ b/about.html
@@ -19,16 +19,15 @@
 			</div>
 			<div class="top_left">
 				<span class="r20y500" id="yagomurakami">Ya Mu</span>
-			</div>
-			<div class="top_right">
 				<span class="r20w500 show_on_mobile">
 					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
 				</span>
-				<br>
+				<span> / </span>
 				<span class="r40w500 underline show_on_mobile">
 					<a class="hide_hyper underline" href="work.html" id="work_about">My Work</a>
 				</span>
 			</div>
+
 			<div class="portf_group animated fadeIn faster delay-150ms">
 				<div class="first_col">
 					<span class="r30b500">Yago Murakami | yagowns@gmail.com</span>
