--- a/about.html
+++ b/about.html
@@ -22,8 +22,7 @@
 				<span class="r20w500 show_on_mobile">
 					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
 				</span>
-				<span> / </span>
-				<span class="r20w500 underline show_on_mobile">
+				<span class="r20w500 underline space20 show_on_mobile">
 					<a class="hide_hyper underline" href="work.html" id="work_about">My Work</a>
 				</span>
 			</div>
