--- a/about.html
+++ b/about.html
@@ -26,80 +26,6 @@
 					<a class="hide_hyper underline" href="work.html" id="work_about">My Work</a>
 				</span>
 			</div>
-
-			<div class="portf_group animated fadeIn faster delay-150ms">
-				<div class="first_col">
-					<span class="r30b500">Yago Murakami | yagowns@gmail.com</span>
-					<div class="space10"></div>
-					<div class="r20b500">Currently based in <a class="underline map">Lisbon, Portugal</a></div>
-					<div class="space50"></div>
-				</div>
-				<div class="second_col">
-					<span class="r20b500">&#11106; Education</span>
-					<div class="space10"></div>
-					<span class="r15b700">IADE<br>Faculdade de Design, Tecnologia e Comunicação</span>
-					<br>
-					<span class="r15b400">Graduate, Visual Design,<br>2011 to 2014, Lisbon, Portugal</span>
-					<div class="space30"></div>
-					<span class="r15b700">PUC-Rio<br>Pontifícia Universidade Católica do Rio de Janeiro</span>
-					<br>
-					<span class="r15b400">Exchange Program, Visual Design,<br>2013 to 2014, Rio de Janeiro, Brazil</span>
-					<div class="space30"></div>
-					<span class="r15b700">FBAUL<br>Faculdade de Belas Artes da Universidade de Lisboa</span>
-					<br>
-					<span class="r15b400">Postgraduate, Communication Design and New Media,<br>2016 to 2017, Lisbon, Portugal</span>
-					</div>
-				<div class="third_col">
-					<span class="r20b500">&#11106; Experience</span>
-					<div class="space10"></div>
-					<span class="r15b700">Effect Sport</span>
-					<br>
-					<span class="r15b400">Marketing Agency,<br>Web & Graphic Designer,<br>August 2013 to April 2015, Rio de Janeiro, Brazil</span>
-					<div class="space30"></div>
-					<span class="r15b700">YXE</span>
-					<br>
-					<span class="r15b400">Marketing & Publicity Agency,<br>Web & Graphic Designer,<br>April 2015 to October 2015, Rio de Janeiro, Brazil</span>
-					<div class="space30"></div>
-					<span class="r15b700">Media Consulting</span>
-					<br>
-					<span class="r15b400">Marketing & Communication Agency,<br>Web & Graphic Designer,<br>October 2016 to present day, Lisbon, Portugal</span>
-					<div class="space20 divider"></div>
-					<div class="space20"></div>
-					<span class="r20b500">&#8776; 5 years of agency experience.</span>
-				</div>
-				<div class="fourth_col">
-					<span class="r20b500">&#11106; Knowledge and Skills</span>
-					<div class="space10"></div>
-					<span class="r15b700">Graphic</span>
-					<br>
-					<span class="r15b400">Photoshop, Illustrator, Indesign & Sketch.</span>
-					<div class="space10"></div>
-					<span class="r15b700">Web</span>
-					<br>
-					<span class="r15b400">HTML5, CSS3, JavaScript & Wordpress.</span>
-					<div class="space10"></div>
-					<span class="r15b700">Motion</span>
-					<br>
-					<span class="r15b400">Premiere & After Effects.</span>
-					<div class="space10"></div>
-					<span class="r15b700">3D</span>
-					<br>
-					<span class="r15b400">3D Max, Sketch Up & Auto Cad.</span>
-					<div class="space30"></div>
-					<span class="r20b500">&#11106; Languages</span>
-					<div class="space10"></div>
-					<span class="r15b400">English & Portuguese</span>
-					<div class="space30"></div>
-					<span class="r20b500">&#11106; Hobbies/Interests</span>
-					<div class="space10"></div>
-					<span class="r15b400">Reading/collecting books & comics, writing short stories, painting (leaning towards color field & geometric abstraction styles), programming interactive/reactive web pages, cooking, mixology, traveling & music.</span>
-				</div>
-				<div class="map_circle">
-					<div class="map_circle_pos">
-						<img class="img_resp_center" src="img/lisbon.png">
-					</div>
-				</div>
-			</div>
 			<div class="groupup">
 				<div class="black_left">
 					<span class="home_spacing vertical_centered_text r40w500 underline disapear_on_mobile"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
@@ -114,7 +40,7 @@
 					<div class="right_holder waitlast">
 						<div class="r50b500">About_</div>
 						<p class="r15b400">Hello, my name is Yago Murakami, born and raised in Rio de Janeiro, Brazil, currently living and working in Lisbon, Portugal. Graduated in Visual Design, with over 5 years of experience in graphic and web design that is accompanied by a set of self-taught web-development skills. I had the privilege to work with brands such as Nike, Gatorade, Nutella, Hendricks, Cointreau, WomenSecret, Syoss and Schwarzkopf.<br><br>With an ever-growing desire to create and experiment, learning has an important role in each creation. From concept to execution of an idea, the whole process of creation is, by itself, immensely rewarding mostly because of its path, rather than its final form.<br><br>If you want to know more about me or my work, you can view my curriculum or download the .pdf below, or if you want to just say hi, freel to contact me.</p>
-						<div class="r15b700 space50"><span target="_blank" class="underline" id="screen_portf"><a>View</a></span> or <a href="" target="_blank" class="underline">download</a> Curriculum</div>
+						<div class="r15b700 space50"><span target="_blank" class="underline"><a href="view.html">View</a></span> or <a href="" target="_blank" class="underline">download</a> Curriculum</div>
 					</div>
 					<span class="work_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 				</div>
