--- a/view.html
+++ b/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Yago Murakami — About</title>
+	<title>Yago Murakami — View</title>
 	<link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -9,9 +9,9 @@
 	<script src="js/barba.min.js" type="text/javascript"></script>
 	<meta charset=utf-8>
 </head>
-<body>
+<body style="background-color: #ffd700;">
 	<div class="groupup" id="barba-wrapper">
-		<div <div class="barba-container" data-namespace="about">
+		<div <div class="barba-container" data-namespace="view">
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<span class="r20w500 space10 show_on_mobile">
