--- a/view.html
+++ b/view.html
@@ -13,7 +13,7 @@
 	<div class="groupup" id="barba-wrapper">
 		<div <div class="barba-container" data-namespace="view">
 			<div class="top_left">
-				<span class="r40y500" id="yagomurakami">Ya Mu</span>
+				<span class="r40y500 view_black" id="yagomurakami">Ya Mu</span>
 				<span class="r20w500 space10 show_on_mobile">
 					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
 				</span>
@@ -29,7 +29,7 @@
 					<div class="space50"></div>
 				</div>
 				<div class="second_col">
-					<span class="r20b500">&#11106; Education</span>
+					<span class="r20b500">> Education</span>
 					<div class="space10"></div>
 					<span class="r15b700">IADE<br>Faculdade de Design, Tecnologia e Comunicação</span>
 					<br>
@@ -44,7 +44,7 @@
 					<span class="r15b400">Postgraduate, Communication Design and New Media,<br>2016 to 2017, Lisbon, Portugal</span>
 					</div>
 				<div class="third_col">
-					<span class="r20b500">&#11106; Experience</span>
+					<span class="r20b500">> Experience</span>
 					<div class="space10"></div>
 					<span class="r15b700">Effect Sport</span>
 					<br>
@@ -62,7 +62,7 @@
 					<span class="r20b500">&#8776; 5 years of agency experience.</span>
 				</div>
 				<div class="fourth_col">
-					<span class="r20b500">&#11106; Knowledge and Skills</span>
+					<span class="r20b500">> Knowledge and Skills</span>
 					<div class="space10"></div>
 					<span class="r15b700">Graphic</span>
 					<br>
@@ -80,11 +80,11 @@
 					<br>
 					<span class="r15b400">3D Max, Sketch Up & Auto Cad.</span>
 					<div class="space30"></div>
-					<span class="r20b500">&#11106; Languages</span>
+					<span class="r20b500">> Languages</span>
 					<div class="space10"></div>
 					<span class="r15b400">English & Portuguese</span>
 					<div class="space30"></div>
-					<span class="r20b500">&#11106; Hobbies/Interests</span>
+					<span class="r20b500">> Hobbies/Interests</span>
 					<div class="space10"></div>
 					<span class="r15b400">Reading/collecting books & comics, writing short stories, painting (leaning towards color field & geometric abstraction styles), programming interactive/reactive web pages, cooking, mixology, traveling & music.</span>
 				</div>
