--- a/view.html
+++ b/view.html
@@ -9,7 +9,7 @@
 	<script src="js/barba.min.js" type="text/javascript"></script>
 	<meta charset=utf-8>
 </head>
-<body style="background-color: #ffd700;">
+<body>
 	<div class="groupup" id="barba-wrapper">
 		<div <div class="barba-container" data-namespace="view">
 			<div class="top_left">
