--- a/view.html
+++ b/view.html
@@ -21,6 +21,11 @@
 					<a class="hide_hyper underline" href="work.html" id="work_about">My Work</a>
 				</span>
 			</div>
+			<div class="top_right">
+				<div class="back_menu">
+					<a href="index.html" class="back_black">< Home</a>
+				</div>
+			</div>
 			<span class="home_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
 			<span class="work_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 			<div class="portf_group animated fadeIn faster delay-150ms">
