--- a/view.html
+++ b/view.html
@@ -14,17 +14,15 @@
 		<div <div class="barba-container" data-namespace="view">
 			<div class="top_left">
 				<span class="r40y500 view_black" id="yagomurakami">Ya Mu</span>
+				<div class="back_menu">
+					<a href="index.html" class="back_white">< Home</a>
+				</div>
 				<span class="r20w500 space10 show_on_mobile">
 					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
 				</span>
 				<span class="r20w500 space10 show_on_mobile">
 					<a class="hide_hyper underline" href="work.html" id="work_about">My Work</a>
 				</span>
-			</div>
-			<div class="top_right">
-				<div class="back_menu">
-					<a href="index.html" class="back_black">< Home</a>
-				</div>
 			</div>
 			<span class="home_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
 			<span class="work_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
