--- a/view.html
+++ b/view.html
@@ -15,9 +15,9 @@
 			<div class="top_left">
 				<span class="r40y500 view_black" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="index.html" class="back_white">< Home</a>
+					<a href="index.html" class="back_black">< Home</a>
 				</div>
-				<span class="r20w500 space10 show_on_mobile">
+				<span class="r20w500 space20 show_on_mobile">
 					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
 				</span>
 				<span class="r20w500 space10 show_on_mobile">
