--- a/view.html
+++ b/view.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="groupup" id="barba-wrapper">
 		<div <div class="barba-container" data-namespace="view">
-			<div class="top_left">
+			<div class="top_left animated fadeInDown">
 				<span class="r40y500 view_black" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
 					<a href="index.html" class="back_black">< About</a>
