--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 					<a href="what.html"><img class="img_resp_center" src="img/1.png" id="showcase"></a>
 				</div>
 			</div>
-			<div class="top_left">
+			<div class="top_left animated fadeInDown">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<span class="r20w500 space10 show_on_mobile">
 					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
