--- a/view.html
+++ b/view.html
@@ -15,7 +15,7 @@
 			<div class="top_left animated fadeInDown">
 				<span class="r40y500 view_black" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="index.html" class="back_black">< About</a>
+					<a href="about.html" class="back_black">< About</a>
 				</div>
 				<span class="r20w500 space20 show_on_mobile">
 					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
