--- a/view.html
+++ b/view.html
@@ -15,8 +15,8 @@
 			<div class="top_left animated fadeInDown">
 				<span class="r40y500 view_black" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="about.html" class="back_black">< About</a>
-					<a href="home.html" class="back_black">< Home</a>
+					<a href="about.html" class="back_black">< About</a><br>
+					<a href="home.html" class="back_black">< Home</a><br>
 					<a href="work.html" class="back_black">My Work ></a>
 				</div>
 			</div>
