--- a/second_work.html
+++ b/second_work.html
@@ -29,29 +29,29 @@
 							<span class="r20b500">— Disposable Bitcoin Wallet</span>
 						</div>
 						<div class="first_third space20">
-							<span class="r20b500">&#11106; Abstract</span>
+							<span class="r20b500">> Abstract</span>
 							<div class="space10"></div>
 							<span class="r15b400">Purge was thought out as a digital bitcoin wallet with similar features from paper bitcoin wallets. The main concept revolves around the ability to quickly dispose an address and the management of various different unrelated addresses, without compromising your privacy and giving the user total control of their information and private keys.</span>
 						</div>
 						<div class="second_third space20">
-							<span class="r20b500">&#11106; Made With</span>
+							<span class="r20b500">> Made With</span>
 							<div class="space10"></div>
 							<span class="r15b400">Sketch, Illustrator, Photoshop.</span>
 							<div class="space20"></div>
-							<span class="r20b500">&#11106; Keywords</span>
+							<span class="r20b500">> Keywords</span>
 							<div class="space10"></div>
 							<span class="r15b400">Crypocurrency, Bitcoin, Digital Wallet.</span>
 						</div>
 					</div>
 					<div class="row space50">
 						<div class="first_half">
-							<span class="r20b500">&#11106; Introduction</span>
+							<span class="r20b500">> Introduction</span>
 							<div class="space10"></div>
 							<div class="r15b400">This app was thought as a way to guarantee a bigger security for Bitcoin users that wanted to have total control of their assets. Since Bitcoin’s transaction informations are publicly stored in a ledger called Blockchain, the unintended reuse of addresses can lead to a security flaw, where it enables possible attacks where, through transaction patterns, another person can recovering Bitcoin private keys using weak signatures from the blockchain.
 							<div class="space10"></div>
 							Most modern bitcoin and other cryptocurrencies wallets already manage your assets through multiple addresses, making sure there is no unsafe reuse. This app proposal stands on a different take, where the user has total control of their addresses and keys, providing infinite incoming transactions, and only one outgoing transaction in order to prevent this vulnerability.</div>
 							<div class="space50"></div>
-							<span class="r20b500">&#11106; Concept</span>
+							<span class="r20b500">> Concept</span>
 							<div class="space10"></div>
 							<div class="r15b400">Based on the idea of disposing an address after a single outgoing transaction, the name came to be as Purge, as if a letter was burned after the receiver read it. The logo is the japanese kanji 火 for fire, shaped as a flame, coming out of a wallet.
 							<div class="space10"></div>
@@ -70,7 +70,7 @@
 					</div>
 					<div class="row space50 space50down">
 						<div class="first_half">
-							<span class="r20b500">&#11106; Implementation</span>
+							<span class="r20b500">> Implementation</span>
 							<div class="space10"></div>
 							<div class="r15b400">The app approaches a different implementation seen on existing cryptocurrency apps, trying to break the visual pattern seen in related apps with a ludification approach, simplifying navigation and implementing natural interactions throughout the app
 							<div class="space10"></div>
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 						<div class="second_half">
-							<span class="r20b500">&#11106; Results</span>
+							<span class="r20b500">> Results</span>
 							<div class="space10"></div>
 							<div class="r15b400">The finished app is a simple yet complex crypto wallet that guarantees security and privacy. Each account can have its unique name and are able to verify all incoming transactions. Through the playful nature of the app, mundane tasks like generating a news address, sending information to receive assets or even cashing out became less tedious, but not less capable.
 							</div>
