--- a/third_work.html
+++ b/third_work.html
@@ -29,28 +29,28 @@
 							<span class="r20b500">— Minuto de Silêncio Comedy Podcast Logo Rework</span>
 						</div>
 						<div class="first_third space20">
-							<span class="r20b500">&#11106; Abstract</span>
+							<span class="r20b500">> Abstract</span>
 							<div class="space10"></div>
 							<span class="r15b400">Since 2014, Minuto de Silêncio Podcast has a growing audience, playing a big part in the present scenario of Comedy Podcasts in Brazil. With more than three million downloads through its 250+ episodes, MDS podcast has had notorious guest from the comedy scene from Brazil, ranging through TV actors, writers, directors and many other influential personalities from the media and the internet. Given its growth, the brand had to adapt along with the evolving format, appealing to a more broader audience, now the podcast talks more about current events in Brazil and in the world, but never losing its comedic nature.</span>
 						</div>
 						<div class="second_third space20">
-							<span class="r20b500">&#11106; Made With</span>
+							<span class="r20b500">> Made With</span>
 							<div class="space10"></div>
 							<span class="r15b400">Illustrator, Photoshop, Wordpress.</span>
 							<div class="space20"></div>
-							<span class="r20b500">&#11106; Keywords</span>
+							<span class="r20b500">> Keywords</span>
 							<div class="space10"></div>
 							<span class="r15b400">Logo Rework, Branding, Webdesign, Podcast.</span>
 						</div>
 						<div class="third_third space20">
-							<span class="r20b500">&#11106; Links</span>
+							<span class="r20b500">> Links</span>
 							<div class="space10"></div>
 							<span class="r15b400"><a href="http://minutodesilencio.com" class="underline">minutodesilencio.com</a></span>
 						</div>
 					</div>
 					<div class="row space50">
 						<div class="first_half">
-							<span class="r20b500">&#11106; Concept</span>
+							<span class="r20b500">> Concept</span>
 							<div class="space10"></div>
 							<div class="r15b400">The first and original logo was created appealing to three main characteristics of the podcast; that it was a podcast (headphones), that it was a comedy podcast (clown nose) and that its humor would tend, sometimes, to a more “dark” type of humor (skull).
 							<div class="space10"></div>
@@ -65,7 +65,7 @@
 					</div>
 					<div class="row space50 space50down">
 						<div class="first_half">
-							<span class="r20b500">&#11106; Implementation</span>
+							<span class="r20b500">> Implementation</span>
 							<div class="space10"></div>
 							<div class="r15b400">The new branding is applied throughout the podcast social media, website and its display images for each episode. The main composition is the one the display image for each episode, referencing a entrance ticket to a show. Each composition contains the Podcast name, the season, the website, the number and name of each episode applied over a halftone image composition that sums each episode.
 							<div class="space10"></div>
