--- a/view.html
+++ b/view.html
@@ -15,7 +15,7 @@
 			<div class="top_left">
 				<span class="r40y500 view_black" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="about.html" class="back_black">< About</a><span class="show_on_mobile_inline"> / </span><a href="home.html" class="back_black show_on_mobile">Home</a><span class="show_on_mobile_inline"> / </span><a href="work.html" class="back_black show_on_mobile">My Work</a>
+					<a href="about.html" class="back_black">< About</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="home.html" class="back_black show_on_mobile">Home</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="work.html" class="back_black show_on_mobile">My Work</a>
 				</div>
 			</div>
 			<span class="home_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
