--- a/about.html
+++ b/about.html
@@ -19,12 +19,9 @@
 			</div>
 			<div class="top_left animated fadeInDown">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
-				<span class="r20w500 space10 show_on_mobile">
-					<a class="hide_hyper underline" href="index.html" id="home_about">Home</a>
-				</span>
-				<span class="r20w500 space10 show_on_mobile">
-					<a class="hide_hyper underline" href="work.html" id="work_about">My Work</a>
-				</span>
+				<div class="back_menu">
+					<a href="home.html" class="back_black show_on_mobile_inline">Home</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="work.html" class="back_black show_on_mobile_inline">My Work</a>
+				</div>
 			</div>
 			<div class="groupup">
 				<div class="black_left">
