--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="top_left animated fadeInDown">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
-				<div class="back_menu">
+				<div class="back_menu view_white">
 					<a href="home.html" class="back_black show_on_mobile_inline">Home</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="work.html" class="back_black show_on_mobile_inline">My Work</a>
 				</div>
 			</div>
