--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 			<div class="top_left animated fadeInDown">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="home.html" class="back_white show_on_mobile_inline">Home</a><span class="back_white_span show_on_mobile_inline"> / </span><a href="work.html" class="back_white show_on_mobile_inline">My Work</a>
+					<a href="index.html" class="back_white show_on_mobile_inline">Home</a><span class="back_white_span show_on_mobile_inline"> / </span><a href="work.html" class="back_white show_on_mobile_inline">My Work</a>
 				</div>
 			</div>
 			<div class="groupup">
