--- a/fourth_work.html
+++ b/fourth_work.html
@@ -106,12 +106,12 @@
 						</div>
 						<div class="second_half">
 							<audio controls autoplay id="emails">
-							      <source src="sounds/gif_emails.wav" type="audio/mpeg">
+							      <source src="sounds/gif_emails.wav" type="audio/mpeg" autostart="0">
 						    </audio>
 						    <div class="r15b400">Emails > Text > Hexadecimal > BMP File > WAV File.</div>
 						    <div class="space20"></div>
 						    <audio controls autoplay id="password">
-						          <source src="sounds/gif_senhas.wav" type="audio/mpeg">
+						          <source src="sounds/gif_senhas.wav" type="audio/mpeg" autostart="0">
 						    </audio>
 						    <div class="r15b400">Passwords > Text > Hexadecimal > BMP File > WAV File.</div>
 						</div>
