--- a/fourth_work.html
+++ b/fourth_work.html
@@ -105,13 +105,13 @@
 							</div>
 						</div>
 						<div class="second_half">
-							<audio controls muted id="emails">
-							      <source src="sounds/gif_emails.wav" type="audio/mpeg" autostart="0">
+							<audio controls muted autostart="0" id="emails">
+							      <source src="sounds/gif_emails.wav" type="audio/mpeg">
 						    </audio>
 						    <div class="r15b400">Emails > Text > Hexadecimal > BMP File > WAV File.</div>
 						    <div class="space20"></div>
-						    <audio controls muted id="password">
-						          <source src="sounds/gif_senhas.wav" type="audio/mpeg" autostart="0">
+						    <audio controls muted autostart="0" id="password">
+						          <source src="sounds/gif_senhas.wav" type="audio/mpeg">
 						    </audio>
 						    <div class="r15b400">Passwords > Text > Hexadecimal > BMP File > WAV File.</div>
 						</div>
