--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="content">
 				<div class="center_center">
 					<div class="circle_home">
-						<a href="what.html"><img class="img_resp_center" src="img/1.png" id="showcase"></a>
+						<img class="img_resp_center" src="img/1.png" id="showcase">
 					</div>
 				</div>
 				<div class="middle_top">
