--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 		<div <div class="barba-container" data-namespace="about">
 			<div class="center_center">
 				<div class="circle">
-					<a href="what.html"><img class="img_resp_center" src="img/1.png" id="showcase"></a>
+					<img class="img_resp_center" src="img/1.png" id="showcase">
 				</div>
 			</div>
 			<div class="top_left animated fadeInDown">
