--- a/fith_work.html
+++ b/fith_work.html
@@ -15,8 +15,6 @@
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
 					<a href="work.html" class="back_black">< Works</a>
-					<br>
-					<a href="fith_work.html" class="back_black">Next Project ></a>
 				</div>
 			</div>
 			<div class="section">
@@ -25,26 +23,27 @@
 					<div class="row">
 						<img src="img/100klives.png" class="header_img">
 						<div class="fullsize space20">
-							<span class="r50b500">100K Lives Slot Machine</span>
-							<span class="r20b500">— An experimental interpretation of leaked email and passwords</span>
+							<span class="r50b500">This Website / Portfolio</span>
+							<span class="r20b500">— A showcase</span>
 						</div>
 						<div class="first_third space20">
 							<span class="r20b500">> Abstract</span>
 							<div class="space10"></div>
-							<span class="r15b400">This project is an experimental interpretation of one hundred thousand stolen & leaked emails and passwords, leaked between October 22nd to 31st of 2016, represented through images, sounds and an interactive gambling game. The whole experiment is based around on how data can be transformed, read and displayed.</span>
+							<span class="r15b400">This portfolio was created with the intent to showcase stand-alone personal works and bigger projects that were in fact executed. Both segments deal with the creative and technical characteristics of my works, along with my interests and abilities. All works and projects where entirely created by myself.</span>
 						</div>
 						<div class="second_third space20">
 							<span class="r20b500">> Made With</span>
 							<div class="space10"></div>
-							<span class="r15b400">Photoshop, HTML, CSS, JavaScript, Jquery, Audacity.</span>
+							<span class="r15b400">Photoshop, Illustrator, Premiere, HTML, CSS, JavaScript, Jquery.</span>
 							<div class="space20"></div>
 							<span class="r20b500">> Keywords</span>
 							<div class="space10"></div>
-							<span class="r15b400">Data, leaked information, hexadecimal, gambling.</span>
+							<span class="r15b400">Portfolio, visual design, web design, UI/UX, interactive design.</span>
 						</div>
 						<div class="third_third space20">
 							<span class="r20b500">> Links</span>
 							<div class="space10"></div>
+							<span class="r15b400"><a href="index.html" class="underline">Homepage</a></span>
 							<span class="r15b400"><a href="#" class="underline">Github</a></span>
 						</div>
 					</div>
@@ -52,13 +51,19 @@
 						<div class="first_half">
 							<span class="r20b500">> Concept</span>
 							<div class="space10"></div>
-							<div class="r15b400">Having access to strangers accounts can seem quite impossible, but in reality, it isn’t. Hourly, hundreds of thousands of emails accounts are stolen and leaked, and the user is, most of the times, not aware of this situation, since emails and passwords are just text and can be leaked pretty easily.
+							<div class="r15b400">This entire website was hand-coded because the intent was to create an web page distinct from standard wordpress templates and boostrap models. With this in mind, the core ideas of this portfolio were:
 							<div class="space10"></div>
-							This information is easily accessible by just a quick google search. Hundreds of sites provide a space for anyone to upload a text file with thousands of accounts and passwords, that being only a fraction of what they truly possess, announcing and giving the information if you have interest in buying the rest of information.
+							<div class="bullet">— Use of simples geometric shapes;</div>
 							<div class="space10"></div>
-							The danger in this kinds of leaks, is not just having your personal information and email leaked, the real problem is that most people use the same email, passwords and usernames for various different accounts. With that in mind, if we have access to an email, it is most likely that we might have access to that person's facebook, twitter, or even amazon or paypal accounts if they do not have two-factor authentication or other security features.
+							<div class="bullet">— Application of a simple color scheme;</div>
 							<div class="space10"></div>
-							In this project it was acquired more than one hundred thousand leaked and stolen accounts to set a database. There was a mapping made through all the possible characters, excluding space, inside all the passwords, based on the american layout keyboard to see the ones that are most used. It was also mapped out the providers that had most vulnerable email accounts. Interesting, while acquiring all that information, which surprisingly took only about an hour and a half, it came the realization: one hundred thousands accounts, lives, possible different persons, are resumed in about 3.37 megabytes of text. If all seven billion people in the world had one email account at least, it would basically be resumed in about 236 megabytes of text, which is surprisingly light.
+							<div class="bullet">— To direct the user attention to images and to the written content;</div>
+							<div class="space10"></div>
+							<div class="bullet">— Use images and typography to dictate the layout and structure;</div>
+							<div class="space10"></div>
+							<div class="bullet">— Avoid the use of unnecessary elements like shadows, gradients, icons, heavy and slow animations, and overly complex elements;</div>
+							<div class="space10"></div>
+							<div class="bullet">— To maintain a simple and minimalist portfolio that evolves as the user searches for more information.</div>
 						</div>
 						</div>
 						<div class="second_half">
